--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,3 @@
-[package]
-name = "home-tools-rs"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-[dependencies]
-egui = "0.30"
-eframe = { version = "0.30", default-features = false, features = [
-  "default_fonts", # Embed the default egui fonts.
-  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
-  "persistence",   # Enable restoring app state when restarting the app.
-] }
-log = "0.4"
-serde = { version = "1.0", features = ["derive"] }
-reqwest = { version = "0.12", features = ["json"] }
-tokio = { version = "1", features = ["full"] }
+members = ["app", "shared"]
