Fonts and styles

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -14,4 +14,4 @@ eframe = { version = "0.31", default-features = false, features = [
 ] }
 log = "0.4"
 
-egui-phosphor = "0.9"
+egui-phosphor = { version = "0.9", features = ["thin", "bold"] }
