--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-shared = { path = "../shared" }
+shared = { path = "../shared", features = ["ehttp"] }
 
 egui = "0.31"
+ehttp = "0.5.0"
 eframe = { version = "0.31", default-features = false, features = [
   "default_fonts", # Embed the default egui fonts.
   "glow",          # Use the glow rendering backend. Alternative: "wgpu".
