--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+ehttp = { version = "0.5.0", optional = true }
+chrono = { version = "0.4", features = ["serde"] }
+
+[features]
+default = []
+ehttp = ["dep:ehttp"]
